Calculate distance, update readme

--- a/templates/history.html
+++ b/templates/history.html
@@ -4,8 +4,8 @@
         /* Create two equal columns that floats next to each other */
         .column {
         float: left;
-        width: 50%;
-        padding: 25px;
+        width: 48%;
+        padding: 10px;
         /* height: 300px; Should be removed. Only for demonstration */
         }
         
@@ -21,53 +21,49 @@
     <form action="/history" method="post">
         <h1 style="background-color: lightsalmon;"><a href="/">Sun Calculator</a> | Plot and calculation history 
         <input type="submit" name="mode" value="Show plot history">
-        <input type="submit" name="mode" value="Show calculation history">
-    </form></h1>
+        <input type="submit" name="mode" value="Show calculation history"></h1>
+    </form>
     {% if mode == "Show plot history" %}
         <form action="/history" method="post">
-            <b>-- Showing all {{num}} plots --</b>
-            <input type="submit" name="clearGraphs" value="Clear all graphics">
+            <h2>-- Showing all {{num}} plots --
+            <input type="submit" name="clearGraphs" value="Clear all graphics"></h2>
         </form>
     {% else %}
         <form action="/history" method="post">
-            <b>-- Showing all {{num}} calculations --</b>
-            <input type="submit" name="clearCalcs" value="Clear all calculations">
+            <h2>-- Showing all {{num}} calculations --
+            <input type="submit" name="clearCalcs" value="Clear all calculations"></h2>
         </form>
     {% endif %}
     <div class="row">
-        <div class="column">
+        <div class="column" style="background-color: lightcyan;">
             {% if mode == "Show plot history" %}
                 {% for h in hpair[0] %}
                 <b>Plot {{h["Num"]}}: </b>{{h["plotType"]}} <br>
-                {% for i in h["plotInfo"] %}
-                {{i}}, 
-                {% endfor %}
+                <textarea readonly cols="75" rows="2">{% for i in h["plotInfo"] %}{{i}}, {% endfor %}</textarea>
                 <br><img src="{{h["plotName"]}}" alt="plot"><br>
                 {% endfor%}
             {% else %}
                 {% for h in hpair[0] %}
                 <b>Calculation no.{{h["Num"]}}</b><br>
-                Question: {{h["Question"]}} <br>
-                {{h["Conditions"]}}<br>
-                <textarea cols="50" rows="2">{{h["Result"]}}</textarea><br>
+                Questions : <textarea readonly cols="65" rows="2">{{h["Question"]}}</textarea><br>
+                Conditions: <textarea readonly cols="65" rows="2">{{h["Conditions"]}}</textarea><br>
+                <textarea readonly cols="77" rows="2">{{h["Result"]}}</textarea><br>
                 {% endfor %}
             {% endif %}
         </div>
-        <div class="column">
+        <div class="column" style="background-color: aliceblue;">
             {% if mode == "Show plot history" %}
                 {% for h in hpair[1] %}
                 <b>Plot {{h["Num"]}}: </b>{{h["plotType"]}} <br>
-                {% for i in h["plotInfo"] %}
-                {{i}}, 
-                {% endfor %}
+                <textarea readonly cols="75" rows="2">{% for i in h["plotInfo"] %}{{i}}, {% endfor %}</textarea>
                 <br><img src="{{h["plotName"]}}" alt="plot"><br>
                 {% endfor%}
             {% else %}
                 {% for h in hpair[1] %}
                 <b>Calculation no.{{h["Num"]}}</b><br>
-                Question: {{h["Question"]}} <br>
-                Conditions: {{h["Conditions"]}} <br>
-                <textarea cols="50" rows="2">{{h["Result"]}}</textarea><br>
+                Questions : <textarea readonly cols="65" rows="2">{{h["Question"]}}</textarea><br>
+                Conditions: <textarea readonly cols="65" rows="2">{{h["Conditions"]}}</textarea><br>
+                <textarea readonly cols="77" rows="2">{{h["Result"]}}</textarea><br>
                 {% endfor %}
             {% endif %}
         </div>
