redirect frontend app

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,8 @@
 
 <body style="background-image: url('../static/Image/yearth.png');">
     <!-- style="background-image: url('../static/Image/yearth.png');" -->
-    <h1 align="center">Y-EARTH | Interactive Sun Calculator 交互式太阳时空信息计算器</h1>
+    <h2 align="center">Y-EARTH | Interactive Sun Calculator 交互式太阳时空信息计算器</h2>
+    <h3 style="color: lightgreen;">** Go to <a href="https://yingyan797.github.io/no-backend/y-astronomy">[my frontend apps]</a> to see a (simpler) working version of Sun Calculator **</h3>
     <div class="row">
         <div class="column" style="background-color:lightgoldenrodyellow;">
             <form action="/information" id="guide" method="post" target="_blank"></form>
